--- a/styles.scss
+++ b/styles.scss
@@ -225,6 +225,10 @@ div.quarto-about-jolla .about-link {
   text-decoration:none;
   border:solid 1px
 }
+
+.listing-box-title {
+  font-size: 20px;
+}
 // body {
 //  background-image: url("https://jhemberger.github.io/images/photography/insects/2017_Insects-1.jpg");
 //  background-size: cover;
